--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,8 +4,20 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>marcenaria</display-name>
-	
-	
+
+	<servlet>
+		<servlet-name>upload</servlet-name>
+		<servlet-class>br.com.umc.marcenaria.util.UploadArquivoServlet</servlet-class>
+		<init-param>
+			<param-name>diretorio</param-name>
+			<param-value>src/img</param-value>
+		</init-param>
+	</servlet>
+	<!-- <servlet-mapping>
+		<servlet-name>upload</servlet-name>
+		<url-pattern>/upload</url-pattern>
+	</servlet-mapping>
+ -->
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
